@@ -48,6 +48,7 @@ public interface AppManager {
       Set.of(
           // Javascript apps
           "aggregate-data-entry",
+          "approval",
           "app-management",
           "cache-cleaner",
           "capture",
@@ -70,17 +71,10 @@ public interface AppManager {
           "scheduler",
           "settings",
           "sms-configuration",
-          "tracker-capture",
           "translations",
           "usage-analytics",
           "user",
-          "user-profile",
-          // Struts apps
-          "approval",
-          "dataentry",
-          "maintenance-mobile");
-
-  static final String WEB_MAINTENANCE_APPMANAGER_AUTHORITY = "M_dhis-web-app-management";
+          "user-profile");
 
   static final String DASHBOARD_PLUGIN_TYPE = "DASHBOARD";
 
@@ -216,6 +210,8 @@ public interface AppManager {
    */
   boolean markAppToDelete(App app);
 
+  int getUriContentLength(Resource resource);
+
   // -------------------------------------------------------------------------
   // Static methods for manipulating a collection of apps
   // -------------------------------------------------------------------------
@@ -277,9 +273,10 @@ public interface AppManager {
    *
    * @return list of installed apps with given isBundled property
    */
-  public static List<App> filterAppsByPluginType(String pluginType, Collection<App> apps) {
+  static List<App> filterAppsByPluginType(String pluginType, Collection<App> apps) {
     return apps.stream()
+        .filter(app -> app.getPluginType() != null)
         .filter(app -> app.getPluginType().equals(pluginType))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
